--- a/package.json
+++ b/package.json
@@ -19,16 +19,20 @@
     "edge"
   ],
   "author": "Vojta Jina <vojta.jina@gmail.com>",
-  "dependencies": {},
+  "dependencies": {
+    "is-wsl": "^2.1.1",
+    "which": "^2.0.2"
+  },
   "license": "MIT",
   "devDependencies": {
     "chai": "^4.2.0",
+    "eslint": "^6.8.0",
     "jasmine-node": "^3.0.0",
-    "karma": "^3.1.4",
+    "karma": "^5.0.1",
     "karma-mocha": "1.x || ^0.2.0",
-    "mocha": "^5.2.0",
-    "sinon": "^7.1.1",
-    "standard": "^12.0.0"
+    "mocha": "^7.1.1",
+    "sinon": "^9.0.2",
+    "standard": "^14.3.3"
   },
   "contributors": [
     "Mark Ethan Trostler <mark@zzo.com>",
