--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "standard",
     "pretest": "npm run lint",
-    "test": "standard && mocha test/**/*.spec.js && karma start examples/simple/karma.conf.js"
+    "test": "grunt test"
   },
   "repository": {
     "type": "git",
@@ -27,9 +27,18 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "eslint": "^6.8.0",
+    "grunt": "^1.0.1",
+    "grunt-auto-release": "^0.0.7",
+    "grunt-bump": "^0.8.0",
+    "grunt-conventional-changelog": "^6.1.0",
+    "grunt-conventional-github-releaser": "^1.0.0",
+    "grunt-karma": "^3.0.0",
+    "grunt-npm": "^0.0.2",
+    "grunt-simple-mocha": "^0.4.0",
     "jasmine-node": "^3.0.0",
     "karma": "^5.0.1",
     "karma-mocha": "1.x || ^0.2.0",
+    "load-grunt-tasks": "^5.1.0",
     "mocha": "^7.1.1",
     "sinon": "^9.0.2",
     "standard": "^14.3.3"
