--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "Vojta Jina <vojta.jina@gmail.com>",
   "dependencies": {
     "is-wsl": "^2.1.1",
+    "rimraf": "^3.0.2",
     "which": "^2.0.2"
   },
   "license": "MIT",
@@ -32,12 +33,12 @@
     "grunt-bump": "^0.8.0",
     "grunt-conventional-changelog": "^6.1.0",
     "grunt-conventional-github-releaser": "^1.0.0",
-    "grunt-karma": "^3.0.0",
+    "grunt-karma": "^4.0.0",
     "grunt-npm": "^0.0.2",
     "grunt-simple-mocha": "^0.4.0",
     "jasmine-node": "^3.0.0",
     "karma": "^5.0.1",
-    "karma-mocha": "1.x || ^0.2.0",
+    "karma-mocha": "^2.0.0",
     "load-grunt-tasks": "^5.1.0",
     "mocha": "^7.1.1",
     "sinon": "^9.0.2",
