--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   ],
   "author": "Vojta Jina <vojta.jina@gmail.com>",
   "dependencies": {
-    "is-wsl": "github:pvermeer/is-wsl#feat-check-for-docker",
+    "is-wsl": "^2.2.0",
     "rimraf": "^3.0.2",
     "which": "^2.0.2"
   },
